# sandbox

./: README.md
books/7langs7weeks/: .gitignore  README.md
books/7langs7weeks/erlang/: day1.erl  funfunc.erl
books/7langs7weeks/io/: builder.io  divide.io  fibonacci.io  guess.io  list.io  list2d.io  map.io  myaverage.io  run.io  sum2d.io
books/7langs7weeks/prolog/: books.pl  list.pl
books/7langs7weeks/ruby/: csv.rb  enumeration.rb  grep.rb  guess.rb  tree.rb
books/7langs7weeks/scala/censor/: censor.scala
books/7langs7weeks/scala/tictactoe/: ttt.scala
books/haskell-book/: .gitignore  Bakefile  README.md  notes.md
books/haskell-book/ch10/: main.hs
books/haskell-book/ch11/: Bakefile  main.hs  phone.hs
books/haskell-book/ch12/: Bakefile  main.hs
books/haskell-book/ch13/: Bakefile  ch13.cabal  hello.cabal
books/haskell-book/ch13/exe/: Main.hs
books/haskell-book/ch13/src/: Hello.hs
books/haskell-book/ch14/: ch14.cabal
books/haskell-book/ch14/exe/: Main.hs
books/haskell-book/ch14/src/: Exercises.hs  Morse.hs  Simple.hs
books/haskell-book/ch14/tests/: Test.hs
books/haskell-book/ch15/: Bakefile  LICENSE  ch15.cabal  hardcopy.1
books/haskell-book/ch15/exe/: Main.hs
books/haskell-book/ch15/src/: Chapter15.hs  Madness.hs  Main.hs  Simple.hs
books/haskell-book/ch15/tests/: Main.hs
books/haskell-book/ch16/: ch16.cabal
books/haskell-book/ch16/src/: Main.hs  Simple.hs
books/haskell-book/ch17/: ch17.cabal
books/haskell-book/ch17/src/: Simple.hs
books/haskell-book/ch18/: ch18.cabal
books/haskell-book/hangman/: .gitignore  Bakefile  Dockerfile  hangman.cabal
books/haskell-book/hangman/src/: Main.hs
books/haskell-book/playground/: Bakefile  ChangeLog.md  Dockerfile  docker-compose.yml  playground.cabal
books/haskell-book/playground/src/: Addition.hs
books/learn-you-a-haskell/: Bakefile  README.md  baby.hs  io.hs  types.hs
books/mostly-adequate-guide/: Bakefile  README.md  package.json
books/mostly-adequate-guide/part1_exercises/: support.js
books/mostly-adequate-guide/part1_exercises/exercises/compose/: compose_exercises.js
books/real-world-haskell/: .gitignore
books/real-world-haskell/ch03/: Bookstore.hs  List.hs  Patterns.hs
books/real-world-haskell/ch04/: FirstWord  FirstWord.hs  FoldsAndMaps.hs  InteractWith  InteractWith.hs  Lists.hs  Transpose  Transpose.hs
books/real-world-haskell/ch04/data/: ghc-out.txt  transpose-bad.txt
books/real-world-haskell/ch05/: Prettify.hs  PrettyJSON.hs  SimpleJSON.hs  mypretty.cabal
books/real-world-haskell/ch07/: reverselines.hs
books/real-world-haskell/ch07/objects/: README.txt  main  main.cpp  random.cpp
books/real-world-haskell/ch08/: Glob.hs  GlobRegex.hs
conferences/pycon2016/: README.md
conferences/pycon2016/best-talks/: medical-field.md  property-based-testing.md
conferences/pycon2016/day1/: deep-learning.md  docker-python.md  gevent.md  raspberry-pi-temp-sensor.md  rpython-interpreter.md  thinking-in-coroutines.md
conferences/pycon2016/day2/: doc-driven-development.md  flask.md  foss.md  hard-python.md  statistics.md
conferences/pycon2016/day3/: blog.md  gil.md
exercises/checksums/: notes.md
exercises/checksums/cs/: go.mod  main.go
exercises/dailyprogrammer/2017.12.04_major_scales/: challenge.hs
exercises/dailyprogrammer/2017.12.11_baum_sweet_sequence/: Bakefile  challenge.hs
exercises/go/: go.mod  intermediate1.go
exercises/go/intermediate1/: intermediate1  intermediate1.go  intermediate1.py
exercises/go/intermediate2/: intermediate2.go
exercises/go/intermediate5/: intermediate5  intermediate5.go
exercises/go/lists19/: lists19  lists19.go
exercises/webcrawler/: go.mod  webcrawler  webcrawler.go
playdoh/: README.md
playdoh/environments/: README.md
playdoh/environments/haskell/: Bakefile  Dockerfile  docker-compose.yml
playground/electron-tutorial/: package-lock.json  package.json
playground/electron-tutorial/src/: index.html
playground/image-generator/: .gitignore  package-lock.json  package.json
playground/image-generator/src/: main.js
playground/markov_matrix/: Pipfile  run.py
playground/matrix_elimination/: README.md  elimination.py  make.sh  test_elimination.py
playground/rust/functions/src/: main.rs
playground/rust/ownership/src/: main.rs
playground/rust/restaurant/src/: lib.rs
playground/rust/slices/src/: main.rs
playground/rust/src/: main.rs
(+4 files in other folders)
