name:                ch15
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/ch15#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md


library
  exposed-modules:     Chapter15
                     , Madness
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , QuickCheck


executable ch15
  hs-source-dirs:      exe
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       ch15


test-suite tests
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  hs-source-dirs:      tests
  build-depends:       base
                     , ch15
                     , QuickCheck
                     , hspec
  default-language:    Haskell2010
